--- a/src/app/home/home-products/home-products.component.html
+++ b/src/app/home/home-products/home-products.component.html
@@ -1,5 +1,5 @@
 <div>  
-  <h3 class="title"><span>Best Products</span></h3>
+  <h3 class="title"><span>Our Products</span></h3>
   <!-- <div>Price from min: 
     <input type="text" [(ngModel)]="min">
     <input type="text" [(ngModel)]="max">
