--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,22 +1,37 @@
 <header>
-  <nav>
+  <nav *ngIf="cats">
       <button mat-button [routerLink]="['/']">
         <mat-icon> home </mat-icon>
         <span> Home </span>
       </button>
-      <button mat-button [routerLink]="['/profile']">
-        <mat-icon> account_circle</mat-icon>
-        <span> Profile </span>
-      </button>
+      <button mat-button [matMenuTriggerFor]="menu">  <mat-icon>menu</mat-icon>Categories</button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item *ngFor="let c of cats" [routerLink]="['/category', c.id]"> {{c.categoryName}}</button>
+      </mat-menu>
+      <app-search></app-search>
       <button mat-button [routerLink]="['/cart']">
         <mat-icon> shopping_cart</mat-icon>
-        <span> Cart </span>
+        <span> Cart
+
+            <mat-chip-list>
+                <mat-chip color="accent" selected="true"> {{count}}</mat-chip>
+              </mat-chip-list>
+        </span>
       </button>
 
       <button mat-button [routerLink]="['/order']">
         <mat-icon> loyalty</mat-icon>
         <span> My orders </span>
       </button>
+
+      <button mat-button [routerLink]="['/profile']">
+        <mat-icon> account_circle</mat-icon>
+        <span> Profile </span>
+      </button>
+
+  
+
+
       
     </nav>
   </header>
