--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -18,20 +18,44 @@
       Login
     </mat-card-title>
   </mat-card-header>
+
   <mat-card-content>
-
- 
-          <mat-form-field class="example-form-field">
-            <input matInput placeholder="Email"  [(ngModel)]="mail">
-          </mat-form-field>
-          <mat-form-field class="example-form-field">
-              <input matInput placeholder="Password"  [(ngModel)]="password">
-            </mat-form-field>
-          
-        <mat-card-actions>
-          <button mat-button (click)="Login()">Login</button>
-         
-        </mat-card-actions>
-
+    <mat-form-field class="example-form-field">
+      <input matInput placeholder="Email"  [(ngModel)]="mail">
+    </mat-form-field>
+    <mat-form-field class="example-form-field">
+        <input matInput placeholder="Password"  [(ngModel)]="password">
+      </mat-form-field>
+    
+    <mat-card-actions>
+      <button mat-button (click)="Login()">Login</button> 
+    </mat-card-actions>
   </mat-card-content>
 </mat-card>
+
+
+
+<mat-card class="example-card" *ngIf="!myProfile">
+    <h5>Or you can register</h5>
+    <mat-card-header>
+      <mat-card-title>
+        Register
+      </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+  
+      <mat-form-field class="example-form-field">
+        <input matInput placeholder="Email"  [(ngModel)]="mail2">
+      </mat-form-field>
+      <mat-form-field class="example-form-field">
+          <input matInput placeholder="Password"  [(ngModel)]="password2">
+        </mat-form-field>
+      
+      <mat-card-actions>
+        <button mat-button (click)="Register()">Register</button> 
+      </mat-card-actions>
+  
+    </mat-card-content>
+  </mat-card>
+
+
