--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,3 +1,4 @@
+<h3>My cart</h3>
 <div *ngIf="!inCart">
   <p> You cart is empty! </p>
   <a href="/" class='home-link'>Start shopping</a>
@@ -10,14 +11,12 @@
         </div>
 
           <mat-card-title>{{prod.title}}</mat-card-title>
-          <mat-card-subtitle>{{ prod.price + '₸'}}</mat-card-subtitle>
+          <mat-card-subtitle>
+            <p> {{ prod.price + '₸'}}</p>
+            <p>Quantity: {{ prod.quantity }}</p>
+           
+          </mat-card-subtitle>
         </mat-card-header>
-        
-        <!-- <mat-card-content>
-          <p>
-            {{prod.description}}
-          </p>
-        </mat-card-content>  -->
     
         <mat-card-actions>
             <button mat-button [routerLink]="['/order', prod.id]">  <mat-icon> <i class="material-icons">attach_money</i></mat-icon> Order</button>
