--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -1,8 +1,7 @@
 :host {
     display: block;
-    margin-top: 4rem;
-    padding-top: 2.5rem;
-    padding-bottom: 1.5rem;
+    margin-top: 150px;
+    padding: 2.5rem;
     background-color: #f6f6f7;
     color: #71898c;
     font-size: 0.875rem;
