--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -1,20 +1,21 @@
-<div *ngFor="let prod of orders">
-  <mat-card class="example-card" *ngIf="prod">
-        <mat-card-header>
-        <div mat-card-avatar class="example-header-image">
-            <img mat-card-avatar [src]="prod.image"  alt="Photo of a Shiba Inu">
-        </div>
+<h3>My orders</h3>
+<div class = 'row'>
+<div *ngFor="let order of orders; let i = index" [attr.data-index]="i" >
 
-          <mat-card-title>{{prod.title}}</mat-card-title>
-          <mat-card-subtitle>{{ prod.price + '₸'}}</mat-card-subtitle>
+  <mat-card class="example-card" *ngIf="order">
+        <mat-card-header>
+          <mat-card-title>Order: {{order.id}}</mat-card-title>
         </mat-card-header>
-        <mat-card-content> 
-          {{
-            prod.address
-          }}
+        <mat-card-content *ngIf="prods[i]">
+            <img mat-card-image *ngIf="prods" [src]="prods[i].image">
+          <p>Item: {{ prods[i].title}}</p>
+        <p>Price: {{ prods[i].price}}</p>
+        <p>Shipped to {{ order.address}}</p>
         </mat-card-content>
   </mat-card>
 </div>  
+
+</div>
 <div *ngIf="!orders">
   <p> You haven't ordered anything yet! </p>
   <a href="/" class='home-link'>Start shopping</a>
